# garagex_backend

./: .env.example  Cargo.toml  README.md
migrations/: 001_create_extensions_and_enums.sql  002_create_tables.sql  003_indexes_and_helpers.sql  004_seed_initial_admin.sql
src/: config.rs  health.rs  lib.rs  main.rs  routes.rs  state.rs
src/admin/: handlers.rs  mod.rs  models.rs  repository.rs
src/auth/: extractor.rs  jwt.rs  middleware.rs  mod.rs
src/garage/: handlers.rs  mod.rs  models.rs  repository.rs
